chart/templates/service-sounddetective.yaml
apiVersion: v1
kind: Service
metadata:
  name: sounddetective
  labels:
    app: sounddetective
spec:
  ports:
  - port: 80
    protocol: TCP
  type: NodePort
  selector:
    release: devspace
